# training

./: README.md
crawler/crawler/: CMakeLists.txt  Crawler.cpp  Crawler.h  CurlWrapper.cpp  CurlWrapper.h  Graph.cpp  Graph.h  HtmlHelper.cpp  HtmlHelper.h  Makefile  PageNode.cpp  PageNode.h  Uri.cpp  Uri.h  cmake_install.cmake  crawler  main.cpp  web_crawler  web_crawler.cbp
crawler/crawler.xcodeproj/: project.pbxproj
crawler/crawler.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
crawler/crawler.xcodeproj/project.xcworkspace/xcuserdata/Viktor.xcuserdatad/: UserInterfaceState.xcuserstate
crawler/crawler.xcodeproj/xcuserdata/Viktor.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
crawler/crawler.xcodeproj/xcuserdata/Viktor.xcuserdatad/xcschemes/: crawler.xcscheme  xcschememanagement.plist
